--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,19 @@
 .App-link {
   color: #61dafb;
 }
-
+.header{
+  background-color: lightgray;
+  width: 100%;
+  background-color: lightgray;
+  width: 100%;
+  text-align: start;
+  padding: 1%;
+  font-size: x-large;
+  font-weight: 400;
+}
+.content{
+  height: 100%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
